Fix text wraping in primary display

--- a/style.css
+++ b/style.css
@@ -25,23 +25,26 @@ main{
 }
 
 .textArea{
-    height: 130px;
-    width: 100%;
     margin: 10px 0px 30px 0px;
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
     justify-content: space-between;
 }
 
 .count{
+    width: 320px;
+    text-align: right;
     color: white;
     font-size: 25px;
+    word-wrap: break-word;
 }
 
 .answer{
+    width: 320px;
+    text-align: right;
     color: white;
     font-size: 50px;
+    word-wrap: break-word;
 }
 
 .buttons{
